# SessionKit

./: README.md  pyproject.toml
src/session_kit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sessions_kit/: config.py  core.py  middleware.py
src/sessions_kit.egg-info/: PKG-INFO  SOURCES.txt
src/sessions_kit/id_generators/: uuidGenerator.py
src/sessions_kit/serializers/: JSONSerializer.py
src/sessions_kit/stores/: MemoryStore.py  RedisStore.py
